--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-GOOGLE_API_KEY=AIzaSyAJtdGQRHalkqmZg5AXTjepnMUpEhGrCtY
+GOOGLE_API_KEY="API KEY"
 PDFS_DIRECTORY=./pdfs
 FAISS_INDEX_DIRECTORY=./faiss_index
 DATABASE_URL=sqlite:///database.db
